# medical-rag

./: .gitignore  pyproject.toml
app/: main.py  rag_engine.py  schemas.py
data/medical/: diabetes_management.txt  hypertension_guidelines.txt  malaria_guidelines.txt
metrics/: rag_evaluation.json
scripts/: create_knowledge_base.py  evaluate.py  ingest.py  pinecone_setup.py
tests/: test_rag.py
